Remove obsolete configuration files and enhance runtime API URL support
- Deleted `env.example` and `RUNTIME_CONFIG_CHANGES.md` as they are no longer needed.
- Introduced `config.js` for runtime configuration of the API base URL, allowing dynamic updates without rebuilding the Docker image.
- Updated `Dockerfile` to include a custom entrypoint script that generates `config.js` based on the `API_BASE_URL` environment variable.
- Modified `index.html` to load the new `config.js` for runtime configuration.
- Enhanced `api.ts` to prioritize runtime configuration over build-time settings.

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cryptd - Encrypted Vault</title>
     <meta name="description" content="End-to-end encrypted personal vault" />
+    <!-- Runtime configuration - can be overridden at deployment -->
+    <script src="/config.js"></script>
   </head>
   <body>
     <div id="root"></div>
